--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,4 +1,4 @@
-<div class="tweet-new">
+<div class="tweet-content">
 <div class="tweet-form">
   <div class="error-messages">
     <%= render 'shared/error_messages', resource: @tweets_tag %>
