--- a/app/views/camp_sites/search.html.erb
+++ b/app/views/camp_sites/search.html.erb
@@ -1,29 +1,34 @@
-<% if @result != nil %>
-  <h2 class="sites-pref-name"><%= @result.prefecture.name %></h2>
-<% else %>
-  <h2 class="sites-pref-name">キャンプ場未登録</h2>
-<% end %>
+<div class="camp-sites-search">
+  <div class="search-content">
+    <% if @result != nil %>
+      <h2 class="sites-pref-name"><%= @result.prefecture.name %></h2>
+    <% else %>
+      <h2 class="sites-pref-name">キャンプ場未登録</h2>
+    <% end %>
 
-<% if @results.length != 0 %>
-  <% @results.each do |result| %>
-    <li id="camp_site_<%= result.id %>" class="camp-site">
-      <%= render "result", result: result %>
-    </li>
-  <% end %>
-  <li>
-    <div class="back-btn-area">
-      <div class="u-back-btn">
-        <%= link_to 'BACK', camp_sites_path, class:"u-back" %>
-      </div>
-    </div>
-  </li>
-<% else %>
-  <li>
-    <div class="back-btn-area">
-      <div class="u-back-btn">
-        <%= link_to 'BACK', camp_sites_path, class:"u-back" %>
-      </div>
-    </div>
-  </li>
-<% end %>
-<br>
+    <% if @results.length != 0 %>
+      <% @results.each do |result| %>
+        <li id="camp_site_<%= result.id %>" class="camp-site">
+          <%= render "result", result: result %>
+        </li>
+      <% end %>
+      <li>
+        <div class="back-btn-area">
+          <div class="u-back-btn">
+            <%= link_to 'BACK', camp_sites_path, class:"u-back" %>
+          </div>
+        </div>
+      </li>
+    <% else %>
+      <li>
+        <div class="back-btn-area">
+          <div class="u-back-btn">
+            <%= link_to 'BACK', camp_sites_path, class:"u-back" %>
+          </div>
+        </div>
+      </li>
+    <% end %>
+  <br>
+  </div>
+    <%= render 'shared/sidebar' %>
+</div>
